bindings/bindings.rs

extern "C" {
    pub fn endofname(name: *const ::std::os::raw::c_char) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn xopen_stdin(pathname: *const ::std::os::raw::c_char) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn open_or_warn(
        pathname: *const ::std::os::raw::c_char,
        flags: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn fopen_or_warn(
        filename: *const ::std::os::raw::c_char,
        mode: *const ::std::os::raw::c_char,
    ) -> *mut FILE;
}
extern "C" {
    pub fn xfopen_stdin(filename: *const ::std::os::raw::c_char) -> *mut FILE;
}
extern "C" {
    pub fn xfopen(
        filename: *const ::std::os::raw::c_char,
        mode: *const ::std::os::raw::c_char,
    ) -> *mut FILE;
}
extern "C" {
    pub fn fread(
        __ptr: *mut ::std::os::raw::c_void,
        __size: ::std::os::raw::c_ulong,
        __n: ::std::os::raw::c_ulong,
        __stream: *mut FILE,
    ) -> ::std::os::raw::c_ulong;
}
extern "C" {
    pub fn fclose(__stream: *mut FILE) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn pclose(__stream: *mut FILE) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn fflush_all() -> ::std::os::raw::c_int;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct llist_t {
    pub link: *mut llist_t,
    pub data: *mut ::std::os::raw::c_char,
}
extern "C" {
    pub fn llist_add_to(old_head: *mut *mut llist_t, data: *mut ::std::os::raw::c_void);
}
extern "C" {
    pub fn llist_add_to_end(list_head: *mut *mut llist_t, data: *mut ::std::os::raw::c_void);
}
extern "C" {
    pub fn llist_pop(elm: *mut *mut llist_t) -> *mut ::std::os::raw::c_void;
}
extern "C" {
    pub fn llist_unlink(head: *mut *mut llist_t, elm: *mut llist_t);
}
extern "C" {
    pub fn llist_free(
        elm: *mut llist_t,
        freeit: ::std::option::Option<unsafe extern "C" fn(data: *mut ::std::os::raw::c_void)>,
    );
}
extern "C" {
    pub fn getopt32(
        argv: *mut *mut ::std::os::raw::c_char,
        applet_opts: *const ::std::os::raw::c_char,
        ...
    ) -> u32;
}
extern "C" {
    pub fn getoptind() -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn bb_show_usage();
}
extern "C" {
    pub fn xmalloc_read(
        fd: ::std::os::raw::c_int,
        maxsz_p: *mut usize,
    ) -> *mut ::std::os::raw::c_void;
}
extern "C" {
    pub fn xfunc_die();
}
extern "C" {
    pub fn full_read(
        fd: ::std::os::raw::c_int,
        buf: *mut ::std::os::raw::c_void,
        count: usize,
    ) -> isize;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct suffix_mult {
    pub suffix: [::std::os::raw::c_char; 4usize],
    pub mult: u32,
}
extern "C" {
    pub fn xatoi_positive(numstr: *const ::std::os::raw::c_char) -> ::std::os::raw::c_int;
}
extern "C" {
    pub static mut applet_name: *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn awk_main(
        argc: ::std::os::raw::c_int,
        argv: *mut *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn regcomp_or_errmsg(
        preg: *mut regex_t,
        regex: *const ::std::os::raw::c_char,
        cflags: ::std::os::raw::c_int,
    ) -> *mut ::std::os::raw::c_char;
}
extern "C" {
    pub fn xregcomp(
        preg: *mut regex_t,
        regex: *const ::std::os::raw::c_char,
        cflags: ::std::os::raw::c_int,
    );
}
pub const OPTBIT_F: _bindgen_ty_2 = 0;
pub const OPTBIT_v: _bindgen_ty_2 = 1;
pub const OPTBIT_f: _bindgen_ty_2 = 2;
pub const OPTBIT_e: _bindgen_ty_2 = 3;
pub const OPTBIT_W: _bindgen_ty_2 = 4;
pub const OPT_F: _bindgen_ty_2 = 1;
pub const OPT_v: _bindgen_ty_2 = 2;
pub const OPT_f: _bindgen_ty_2 = 4;
pub const OPT_e: _bindgen_ty_2 = 8;
pub const OPT_W: _bindgen_ty_2 = 16;
pub type _bindgen_ty_2 = ::std::os::raw::c_uint;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct walker_list {
    pub end: *mut ::std::os::raw::c_char,
    pub cur: *mut ::std::os::raw::c_char,
    pub prev: *mut walker_list,
    pub wbuf: [::std::os::raw::c_char; 1usize],
}
#[repr(C)]
#[derive(Copy, Clone)]
pub struct var_s {
    pub type_: ::std::os::raw::c_uint,
    pub number: f64,
    pub string: *mut ::std::os::raw::c_char,
    pub x: var_s__bindgen_ty_1,
}
#[repr(C)]
#[derive(Copy, Clone)]
pub union var_s__bindgen_ty_1 {
    pub aidx: ::std::os::raw::c_int,
    pub array: *mut xhash_s,
    pub parent: *mut var_s,
    pub walker: *mut walker_list,
}
pub type var = var_s;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct chain_s {
    pub first: *mut node_s,
    pub last: *mut node_s,
    pub programname: *const ::std::os::raw::c_char,
}
pub type chain = chain_s;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct func_s {
    pub nargs: ::std::os::raw::c_uint,
    pub body: chain_s,
}
pub type func = func_s;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct rstream_s {
    pub F: *mut FILE,
    pub buffer: *mut ::std::os::raw::c_char,
    pub adv: ::std::os::raw::c_int,
    pub size: ::std::os::raw::c_int,
    pub pos: ::std::os::raw::c_int,
    pub is_pipe: smallint,
}
pub type rstream = rstream_s;
#[repr(C)]
#[derive(Copy, Clone)]
pub struct hash_item_s {
    pub data: hash_item_s__bindgen_ty_1,
    pub next: *mut hash_item_s,
    pub name: [::std::os::raw::c_char; 1usize],
}
#[repr(C)]
#[derive(Copy, Clone)]
pub union hash_item_s__bindgen_ty_1 {
    pub v: var_s,
    pub rs: rstream_s,
    pub f: func_s,
}
pub type hash_item = hash_item_s;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct xhash_s {
    pub nel: ::std::os::raw::c_uint,
    pub csize: ::std::os::raw::c_uint,
    pub nprime: ::std::os::raw::c_uint,
    pub glen: ::std::os::raw::c_uint,
    pub items: *mut *mut hash_item_s,
}
pub type xhash = xhash_s;
#[repr(C)]
#[derive(Copy, Clone)]
pub struct node_s {
    pub info: u32,
    pub lineno: ::std::os::raw::c_uint,
    pub l: node_s__bindgen_ty_1,
    pub r: node_s__bindgen_ty_2,
    pub a: node_s__bindgen_ty_3,
}
#[repr(C)]
#[derive(Copy, Clone)]
pub union node_s__bindgen_ty_1 {
    pub n: *mut node_s,
    pub v: *mut var,
    pub aidx: ::std::os::raw::c_int,
    pub new_progname: *mut ::std::os::raw::c_char,
    pub re: *mut regex_t,
}
#[repr(C)]
#[derive(Copy, Clone)]
pub union node_s__bindgen_ty_2 {
    pub n: *mut node_s,
    pub ire: *mut regex_t,
    pub f: *mut func,
}
#[repr(C)]
#[derive(Copy, Clone)]
pub union node_s__bindgen_ty_3 {
    pub n: *mut node_s,
}
pub type node = node_s;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct nvblock_s {
    pub size: ::std::os::raw::c_int,
    pub pos: *mut var,
    pub prev: *mut nvblock_s,
    pub next: *mut nvblock_s,
}
pub type nvblock = nvblock_s;
#[repr(C)]
#[derive(Copy, Clone)]
pub struct tsplitter_s {
    pub n: node,
    pub re: [regex_t; 2usize],
}
pub type tsplitter = tsplitter_s;
pub const OC_DELETE: _bindgen_ty_3 = 256;
pub const OC_EXEC: _bindgen_ty_3 = 512;
pub const OC_NEWSOURCE: _bindgen_ty_3 = 768;
pub const OC_PRINT: _bindgen_ty_3 = 1024;
pub const OC_PRINTF: _bindgen_ty_3 = 1280;
pub const OC_WALKINIT: _bindgen_ty_3 = 1536;
pub const OC_BR: _bindgen_ty_3 = 1792;
pub const OC_BREAK: _bindgen_ty_3 = 2048;
pub const OC_CONTINUE: _bindgen_ty_3 = 2304;
pub const OC_EXIT: _bindgen_ty_3 = 2560;
pub const OC_NEXT: _bindgen_ty_3 = 2816;
pub const OC_NEXTFILE: _bindgen_ty_3 = 3072;
pub const OC_TEST: _bindgen_ty_3 = 3328;
pub const OC_WALKNEXT: _bindgen_ty_3 = 3584;
pub const OC_BINARY: _bindgen_ty_3 = 4096;
pub const OC_BUILTIN: _bindgen_ty_3 = 4352;
pub const OC_COLON: _bindgen_ty_3 = 4608;
pub const OC_COMMA: _bindgen_ty_3 = 4864;
pub const OC_COMPARE: _bindgen_ty_3 = 5120;
pub const OC_CONCAT: _bindgen_ty_3 = 5376;
pub const OC_FBLTIN: _bindgen_ty_3 = 5632;
pub const OC_FIELD: _bindgen_ty_3 = 5888;
pub const OC_FNARG: _bindgen_ty_3 = 6144;
pub const OC_FUNC: _bindgen_ty_3 = 6400;
pub const OC_GETLINE: _bindgen_ty_3 = 6656;
pub const OC_IN: _bindgen_ty_3 = 6912;
pub const OC_LAND: _bindgen_ty_3 = 7168;
pub const OC_LOR: _bindgen_ty_3 = 7424;
pub const OC_MATCH: _bindgen_ty_3 = 7680;
pub const OC_MOVE: _bindgen_ty_3 = 7936;
pub const OC_PGETLINE: _bindgen_ty_3 = 8192;
pub const OC_REGEXP: _bindgen_ty_3 = 8448;
pub const OC_REPLACE: _bindgen_ty_3 = 8704;
pub const OC_RETURN: _bindgen_ty_3 = 8960;
pub const OC_SPRINTF: _bindgen_ty_3 = 9216;
pub const OC_TERNARY: _bindgen_ty_3 = 9472;
pub const OC_UNARY: _bindgen_ty_3 = 9728;
pub const OC_VAR: _bindgen_ty_3 = 9984;
pub const OC_DONE: _bindgen_ty_3 = 10240;
pub const ST_IF: _bindgen_ty_3 = 12288;
pub const ST_DO: _bindgen_ty_3 = 12544;
pub const ST_FOR: _bindgen_ty_3 = 12800;
pub const ST_WHILE: _bindgen_ty_3 = 13056;
pub type _bindgen_ty_3 = ::std::os::raw::c_uint;
pub const F_in: _bindgen_ty_4 = 0;
pub const F_rn: _bindgen_ty_4 = 1;
pub const F_co: _bindgen_ty_4 = 2;
pub const F_ex: _bindgen_ty_4 = 3;
pub const F_lg: _bindgen_ty_4 = 4;
pub const F_si: _bindgen_ty_4 = 5;
pub const F_sq: _bindgen_ty_4 = 6;
pub const F_sr: _bindgen_ty_4 = 7;
pub const F_ti: _bindgen_ty_4 = 8;
pub const F_le: _bindgen_ty_4 = 9;
pub const F_sy: _bindgen_ty_4 = 10;
pub const F_ff: _bindgen_ty_4 = 11;
pub const F_cl: _bindgen_ty_4 = 12;
pub type _bindgen_ty_4 = ::std::os::raw::c_uint;
pub const B_a2: _bindgen_ty_5 = 0;
pub const B_ix: _bindgen_ty_5 = 1;
pub const B_ma: _bindgen_ty_5 = 2;
pub const B_sp: _bindgen_ty_5 = 3;
pub const B_ss: _bindgen_ty_5 = 4;
pub const B_ti: _bindgen_ty_5 = 5;
pub const B_mt: _bindgen_ty_5 = 6;
pub const B_lo: _bindgen_ty_5 = 7;
pub const B_up: _bindgen_ty_5 = 8;
pub const B_ge: _bindgen_ty_5 = 9;
pub const B_gs: _bindgen_ty_5 = 10;
pub const B_su: _bindgen_ty_5 = 11;
pub const B_an: _bindgen_ty_5 = 12;
pub const B_co: _bindgen_ty_5 = 13;
pub const B_ls: _bindgen_ty_5 = 14;
pub const B_or: _bindgen_ty_5 = 15;
pub const B_rs: _bindgen_ty_5 = 16;
pub const B_xo: _bindgen_ty_5 = 17;
pub type _bindgen_ty_5 = ::std::os::raw::c_uint;
pub const CONVFMT: _bindgen_ty_6 = 0;
pub const OFMT: _bindgen_ty_6 = 1;
pub const FS: _bindgen_ty_6 = 2;
pub const OFS: _bindgen_ty_6 = 3;
pub const ORS: _bindgen_ty_6 = 4;
pub const RS: _bindgen_ty_6 = 5;
pub const RT: _bindgen_ty_6 = 6;
pub const FILENAME: _bindgen_ty_6 = 7;
pub const SUBSEP: _bindgen_ty_6 = 8;
pub const F0: _bindgen_ty_6 = 9;
pub const ARGIND: _bindgen_ty_6 = 10;
pub const ARGC: _bindgen_ty_6 = 11;
pub const ARGV: _bindgen_ty_6 = 12;
pub const ERRNO: _bindgen_ty_6 = 13;
pub const FNR: _bindgen_ty_6 = 14;
pub const NR: _bindgen_ty_6 = 15;
pub const NF: _bindgen_ty_6 = 16;
pub const IGNORECASE: _bindgen_ty_6 = 17;
pub const ENVIRON: _bindgen_ty_6 = 18;
pub const NUM_INTERNAL_VARS: _bindgen_ty_6 = 19;
pub type _bindgen_ty_6 = ::std::os::raw::c_uint;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct globals {
    pub t_double: f64,
    pub beginseq: chain,
    pub mainseq: chain,
    pub endseq: chain,
    pub seq: *mut chain,
    pub break_ptr: *mut node,
    pub continue_ptr: *mut node,
    pub iF: *mut rstream,
    pub vhash: *mut xhash,
    pub ahash: *mut xhash,
    pub fdhash: *mut xhash,
    pub fnhash: *mut xhash,
    pub g_progname: *const ::std::os::raw::c_char,
    pub g_lineno: ::std::os::raw::c_int,
    pub nfields: ::std::os::raw::c_int,
    pub maxfields: ::std::os::raw::c_int,
    pub Fields: *mut var,
    pub g_cb: *mut nvblock,
    pub g_pos: *mut ::std::os::raw::c_char,
    pub g_buf: *mut ::std::os::raw::c_char,
    pub icase: smallint,
    pub exiting: smallint,
    pub nextrec: smallint,
    pub nextfile: smallint,
    pub is_f0_split: smallint,
    pub t_rollback: smallint,
}
